added -Xverify:none to increase startup speed